--- a/exercises/mixins/src/sass/_variables.scss
+++ b/exercises/mixins/src/sass/_variables.scss
@@ -8,3 +8,11 @@ $white: #fff !default;
 
 $btn-disabled-opacity: 0.5 !default;
 
+$yellow: #990;
+$blue: #33a;
+$green: #3c3;
+$purple: #939;
+$pink: $hopbush;
+$orange: #f93;
+$brown: #952;
+
