--- a/exercises/mixins/src/sass/app.scss
+++ b/exercises/mixins/src/sass/app.scss
@@ -16,12 +16,12 @@
     opacity: 0.65;
     box-shadow: none;
   }
-  &.btn-yellow  { @include btn-color(#990);  }
-  &.btn-blue    { @include btn-color(#33a);  }
-  &.btn-green   { @include btn-color(#3c3);  }
-  &.btn-purple  { @include btn-color(#939);  }
-  &.btn-pink    { @include btn-color($hopbush);}
-  &.btn-orange  { @include btn-color(#f93);  }
-  &.btn-brown   { @include btn-color(#952);  }
+  &.btn-yellow  { @include btn-color($yellow);  }
+  &.btn-blue    { @include btn-color($blue);  }
+  &.btn-green   { @include btn-color($green);  }
+  &.btn-purple  { @include btn-color($purple);  }
+  &.btn-pink    { @include btn-color($pink);}
+  &.btn-orange  { @include btn-color($orange);  }
+  &.btn-brown   { @include btn-color($brown);  }
   
 }
