--- a/exercises/nesting/src/sass/app.scss
+++ b/exercises/nesting/src/sass/app.scss
@@ -3,3 +3,19 @@ body {
     color: #c46;
   }
 }
+.btn {
+  padding: 2px 10px 2px 10px;
+  border: 1px solid #c46;
+  border-radius: 2px;
+  &.btn-primary {
+    color: white;
+    background-color: rgb(204, 68, 102);
+  }
+  &.btn-secondary {
+    background-color: #edbcc8;
+    color: black;
+  }
+  &:disabled {
+    opacity: 0.5;
+  }
+}
