--- a/exercises/if/src/sass/_mixins.scss
+++ b/exercises/if/src/sass/_mixins.scss
@@ -27,6 +27,9 @@
 
 @mixin button-base($color) {
   background-color: $color;
+  @if lightness($color) < 70% {
+    color: white;
+  }
   border-color: darken($color, 20%);
   &:hover:not(:disabled) {
     background-color: lighten(saturate($color, 20%), 10%);
